# home_visualizer

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  dev.sh  pyproject.toml  render.yaml  start_server.bat
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/color/: nav_item_color.xml
android/app/src/main/res/drawable/: bg_alignment_rect.xml  bg_step_circle.xml  ic_gallery.xml  ic_hero_bg.xml  ic_scan.xml
android/app/src/main/res/layout/: activity_main.xml  (+6 more)
android/gradle/: libs.versions.toml
android/unityLibrary/: gradle.properties  local.properties
android/unityLibrary/frostFloorplanAR_BurstDebugInformation_DoNotShip/tempburstlibs/arm64-v8a/: lib_burst_generated.txt
android/unityLibrary/launcher/: app-metadata.properties  build.gradle  dependencies.pb
android/unityLibrary/unityLibrary/: build.gradle
android/unityLibrary/unityLibrary/src/main/: AndroidManifest.xml
android/unityLibrary/unityLibrary/xrmanifest.androidlib/: build.gradle
data/: README.md
docs/: hf_model_card.md
scripts/: build_demos.py  export_safetensors.py
server/: main.py
src/buildingcv/: checkpoint.py  data.py  eval_split.py  extract_polygons.py  labels.py  model.py  predict.py  svg_render.py  svg_to_mask.py  train.py
unity/Assets/Scripts/: ARFloorplanScanner.cs  FloorplanExtruder.cs  Triangulator.cs  UnityBridge.cs
viewer/: index.html
viewer/demos/: 1191.json  3676.json  4068.json  manifest.json
weights/: best.safetensors  config.yaml
(+22 files in other folders)
